--- a/docker/config.yaml
+++ b/docker/config.yaml
@@ -11,6 +11,7 @@ customDNS:
   mapping:
     pve.nasenov.dev: 192.168.0.10
     truenas.nasenov.dev: 192.168.0.15
+    kromgo.nasenov.dev: 192.168.0.43
     nasenov.dev: 192.168.0.40
 blocking:
   denylists:
