--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
     route:
       main:
         enabled: true
-        hostnames: 
+        hostnames:
           - grafana.nasenov.dev
         parentRefs:
           - name: internal
@@ -116,6 +116,14 @@ spec:
             editable: true
             options:
               path: /var/lib/grafana/dashboards/postgresql
+          - name: ceph
+            orgId: 1
+            folder: Ceph
+            type: file
+            disableDeletion: false
+            editable: true
+            options:
+              path: /var/lib/grafana/dashboards/ceph
 
     dashboards:
       default:
@@ -204,6 +212,22 @@ spec:
           datasource: Prometheus
         query_statistics:
           url: https://raw.githubusercontent.com/CrunchyData/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/query_statistics.json
+          datasource: Prometheus
+      ceph:
+        ceph-cluster:
+          # renovate: depName="Ceph Cluster"
+          gnetId: 2842
+          revision: 18
+          datasource: Prometheus
+        ceph-osd:
+          # renovate: depName="Ceph - OSD (Single)"
+          gnetId: 5336
+          revision: 9
+          datasource: Prometheus
+        ceph-pools:
+          # renovate: depName="Ceph - Pools"
+          gnetId: 5342
+          revision: 9
           datasource: Prometheus
 
     sidecar:
