--- a/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -19,5 +19,10 @@ spec:
     image:
       repository: ghcr.io/rook/ceph
 
+    csi:
+      enableLiveness: true
+      serviceMonitor:
+        enabled: true
+
     monitoring:
       enabled: true
