feat(truenas): scrape truenas smartctl exporter

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -56,6 +56,10 @@ spec:
             static_configs:
               - targets:
                   - pve.nasenov.dev:9633
+          - job_name: truenas-smartctl-exporter
+            static_configs:
+              - targets:
+                  - truenas.nasenov.dev:9633
 
     alertmanager:
       route:
