--- a/ansible/proxmox/node-exporter.yaml
+++ b/ansible/proxmox/node-exporter.yaml
@@ -3,6 +3,7 @@
   roles:
     - prometheus.prometheus.node_exporter
   vars:
+    # renovate: datasource=github-releases depName=prometheus/node_exporter
     node_exporter_version: 1.9.1
     node_exporter_system_user: node_exporter
     node_exporter_system_group: node_exporter
