--- a/kubernetes/apps/database/emqx/cluster/emqx.yaml
+++ b/kubernetes/apps/database/emqx/cluster/emqx.yaml
@@ -6,6 +6,9 @@ metadata:
   name: emqx
 spec:
   image: public.ecr.aws/emqx/emqx:5.8.6
+  config:
+    data: |
+      api_key.bootstrap_file = "/opt/emqx/etc/api_keys.txt"
   coreTemplate:
     spec:
       replicas: 3
@@ -19,3 +22,12 @@ spec:
                     values:
                       - emqx
               topologyKey: "kubernetes.io/hostname"
+      extraVolumes:
+        - name: emqx-api-keys
+          secret:
+            secretName: emqx-api-keys
+      extraVolumeMounts:
+        - name: emqx-api-keys
+          mountPath: /opt/emqx/etc/api_keys.txt
+          subPath: api_keys.txt
+          readOnly: true
