fix(emqx-exporter): correct cluster label name

--- a/kubernetes/apps/database/emqx/cluster/podmonitor.yaml
+++ b/kubernetes/apps/database/emqx/cluster/podmonitor.yaml
@@ -15,7 +15,7 @@ spec:
       relabelings:
         - action: replace
           # user-defined cluster name, requires unique
-          replacement: emqx5
+          replacement: emqx
           targetLabel: cluster
         - action: replace
           # fix value, don't modify
