--- a/kubernetes/apps/monitoring/alloy/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/alloy/app/helmrelease.yaml
@@ -19,3 +19,30 @@ spec:
   upgrade:
     remediation:
       retries: 3
+  values:
+    controller:
+      tolerations:
+        - key: node-role.kubernetes.io/control-plane
+          operator: Exists
+          effect: NoSchedule
+
+    serviceMonitor:
+      enabled: true
+
+    extraObjects:
+      - apiVersion: gateway.networking.k8s.io/v1
+        kind: HTTPRoute
+        metadata:
+          name: alloy
+        spec:
+          hostnames:
+            - alloy.nasenov.dev
+          parentRefs:
+            - name: internal
+              namespace: kube-system
+              sectionName: https
+          rules:
+            - backendRefs:
+                - name: alloy
+                  namespace: monitoring
+                  port: 12345
