chore(alloy): add in homepage

--- a/kubernetes/apps/default/homepage/app/helmrelease.yaml
+++ b/kubernetes/apps/default/homepage/app/helmrelease.yaml
@@ -206,6 +206,9 @@ spec:
                 - Hubble:
                     icon: cilium.png
                     href: https://hubble.nasenov.dev
+                - Alloy:
+                    icon: alloy.png
+                    href: https://alloy.nasenov.dev
 
             - Automation:
               - Home Assistant:
