chore(alloy): migrate promtail config

--- a/kubernetes/apps/monitoring/alloy/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/alloy/app/helmrelease.yaml
@@ -20,6 +20,12 @@ spec:
     remediation:
       retries: 3
   values:
+    alloy:
+      configMap:
+        create: false
+        name: alloy
+        key: config.alloy      
+
     controller:
       tolerations:
         - key: node-role.kubernetes.io/control-plane
