chore(alloy): try to run as non root user

--- a/kubernetes/apps/monitoring/alloy/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/alloy/app/helmrelease.yaml
@@ -24,7 +24,10 @@ spec:
       configMap:
         create: false
         name: alloy
-        key: config.alloy      
+        key: config.alloy
+      securityContext:
+        runAsUser: 473
+        runAsGroup: 473
 
     controller:
       tolerations:
