fix(alloy): fix log pipeline

--- a/kubernetes/apps/monitoring/alloy/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/alloy/app/helmrelease.yaml
@@ -25,9 +25,9 @@ spec:
         create: false
         name: alloy
         key: config.alloy
-      securityContext:
-        runAsUser: 473
-        runAsGroup: 473
+      # securityContext:
+      #   runAsUser: 473
+      #   runAsGroup: 473
 
     controller:
       tolerations:
