--- a/docker/truenas/compose.yaml
+++ b/docker/truenas/compose.yaml
@@ -1,8 +1,30 @@
+---
+services:
+  node-exporter:
+    image: quay.io/prometheus/node-exporter:v1.9.1
+    command:
+      - "--path.rootfs=/host/root"
+      - "--path.procfs=/host/proc"
+      - "--path.sysfs=/host/sys"
+      - "--path.udev.data=/host/root/run/udev/data"
+      - "--web.listen-address=0.0.0.0:9100"
+      - >-
+        --collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)
+    ports:
+      - "9100:9100"
+    network_mode: host
+    pid: host
+    restart: always
+    volumes:
+      - /:/host/root:ro
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+---
 services:
   smartctl-exporter:
     image: quay.io/prometheuscommunity/smartctl-exporter:v0.14.0
     command:
-      - '--smartctl.device-exclude=sda'
+      - "--smartctl.device-exclude=sda"
     ports:
       - "9633:9633"
     privileged: true
