chore(emqx): set admin password

--- a/kubernetes/apps/database/emqx/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/emqx/cluster/externalsecret.yaml
@@ -3,6 +3,26 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
+  name: emqx-admin-password
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: bitwarden-secrets-manager
+  target:
+    name: emqx-admin-password
+    template:
+      engineVersion: v2
+      data:
+        EMQX_DASHBOARD__DEFAULT_PASSWORD: "{{ .EMQX_DASHBOARD__DEFAULT_PASSWORD }}"
+  data:
+    - secretKey: EMQX_DASHBOARD__DEFAULT_PASSWORD
+      remoteRef:
+        key: EMQX_DASHBOARD__DEFAULT_PASSWORD
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
   name: emqx-api-keys
 spec:
   secretStoreRef:
