--- a/kubernetes/apps/flux-system/flux-operator/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/ks.yaml
@@ -26,6 +26,9 @@ spec:
   interval: 30m
   retryInterval: 2m
   timeout: 5m
+  dependsOn:
+    - name: flux-operator
+      namespace: flux-system
   path: ./kubernetes/apps/flux-system/flux-operator/instance
   prune: false
   sourceRef:
