--- a/kubernetes/apps/default/jellyfin/ks.yaml
+++ b/kubernetes/apps/default/jellyfin/ks.yaml
@@ -16,6 +16,8 @@ spec:
       namespace: rook-ceph
     - name: external-secrets-stores
       namespace: external-secrets
+    - name: intel-device-plugin-gpu
+      namespace: kube-system
   path: ./kubernetes/apps/default/jellyfin/app
   prune: true
   sourceRef:
