--- a/kubernetes/apps/kube-system/intel-device-plugin/ks.yaml
+++ b/kubernetes/apps/kube-system/intel-device-plugin/ks.yaml
@@ -3,18 +3,49 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: intel-device-plugin
+  name: intel-device-plugin-operator
 spec:
   targetNamespace: kube-system
   interval: 30m
   retryInterval: 2m
   timeout: 5m
-  dependsOn:
-    - name: node-feature-discovery
-      namespace: kube-system
   path: ./kubernetes/apps/kube-system/intel-device-plugin/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: intel-device-plugin-gpu
+spec:
+  targetNamespace: kube-system
+  interval: 30m
+  retryInterval: 2m
+  timeout: 5m
+  dependsOn:
+    - name: intel-device-plugin-operator
+      namespace: kube-system
+  path: ./kubernetes/apps/kube-system/intel-device-plugin/gpu
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      name: intel-device-plugin-gpu
+      namespace: kube-system
+    - apiVersion: deviceplugin.intel.com/v1
+      kind: GpuDevicePlugin
+      name: intel-gpu-plugin
+      namespace: kube-system
+  healthCheckExprs:
+    - apiVersion: deviceplugin.intel.com/v1
+      kind: GpuDevicePlugin
+      current: status.desiredNumberScheduled == status.numberReady
+      failed: status.desiredNumberScheduled != status.numberReady
