fix(rook-ceph): try to reduce ceph mon logs

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -17,6 +17,10 @@ spec:
     remediation:
       retries: 3
   values:
+    configOverride: |
+      [global]
+      mon_cluster_log_level = info
+
     toolbox:
       enabled: true
 
