fix(rook-ceph): try to reduce ceph mon logs

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
 
     cephClusterSpec:
       cephConfig:
-        global:
+        mon:
           mon_cluster_log_level: "info"
       dashboard:
         enabled: true
