--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -25,9 +25,9 @@ spec:
       createPrometheusRules: true
 
     cephClusterSpec:
-      cephConfig:
-        mon:
-          mon_cluster_log_level: "info"
+      # cephConfig:
+      #   mon:
+      #     mon_cluster_log_level: "info"
       dashboard:
         enabled: true
         urlPrefix: /
