fix(autobrr): use emptyDir for tmp directory

--- a/kubernetes/apps/default/autobrr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/autobrr/app/helmrelease.yaml
@@ -105,3 +105,11 @@ spec:
           - backendRefs:
               - name: autobrr
                 port: *port
+
+    persistence:
+      config-log:
+        type: emptyDir
+        globalMounts:
+          - path: /config/log
+      tmp:
+        type: emptyDir
