chore(postgres): reduce operator logs

--- a/kubernetes/apps/database/crunchy-postgres-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/app/helmrelease.yaml
@@ -19,5 +19,5 @@ spec:
       retries: 3
   values:
     singleNamespace: true
-    debug: true
+    debug: false
     disable_check_for_upgrades: true
