fix(postgres): reduce pgbouncer logs

--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -93,6 +93,10 @@ spec:
 
   proxy:
     pgBouncer:
+      config:
+        global:
+          log_connections: "0"
+          log_disconnections: "0"
       replicas: 2
       minAvailable: 1
       affinity:
