fix(rook-ceph): try to reduce ceph logs

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -26,6 +26,8 @@ spec:
 
     cephClusterSpec:
       cephConfig:
+        global:
+          debug_default: "0/0"
         mon:
           mon_cluster_log_file_level: "info"
           # TODO: replace mon_cluster_log_file_level with mon_cluster_log_level in next ceph release
