fix(emqx): bootstrap api keys operator way

--- a/kubernetes/apps/database/emqx/cluster/emqx.yaml
+++ b/kubernetes/apps/database/emqx/cluster/emqx.yaml
@@ -6,6 +6,9 @@ metadata:
   name: emqx
 spec:
   image: public.ecr.aws/emqx/emqx:5.8.6
+  bootstrapAPIKeys:
+    - secret: emqx-bootstrap-api-keys
+      key: bootstrap_api_keys
   coreTemplate:
     spec:
       replicas: 3
