fix(emqx): remove operator api key

--- a/kubernetes/apps/database/emqx/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/emqx/cluster/externalsecret.yaml
@@ -33,16 +33,9 @@ spec:
     template:
       engineVersion: v2
       data:
-        bootstrap_api_key: |
-          {{ .EMQX_OPERATOR_API_KEY }}:{{ .EMQX_OPERATOR_API_SECRET }}
+        bootstrap_api_keys: |
           {{ .EMQX_EXPORTER_API_KEY }}:{{ .EMQX_EXPORTER_API_SECRET }}
   data:
-    - secretKey: EMQX_OPERATOR_API_KEY
-      remoteRef:
-        key: EMQX_OPERATOR_API_KEY
-    - secretKey: EMQX_OPERATOR_API_SECRET
-      remoteRef:
-        key: EMQX_OPERATOR_API_SECRET
     - secretKey: EMQX_EXPORTER_API_KEY
       remoteRef:
         key: EMQX_EXPORTER_API_KEY
