--- a/kubernetes/apps/database/emqx/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/emqx/cluster/externalsecret.yaml
@@ -33,8 +33,8 @@ spec:
     template:
       engineVersion: v2
       data:
-        bootstrap_api_keys: |
-          {{ .EMQX_EXPORTER_API_KEY }}:{{ .EMQX_EXPORTER_API_SECRET }}
+        emqx-exporter-api-key: "{{ .EMQX_EXPORTER_API_KEY }}"
+        emqx-exporter-api-secret: "{{ .EMQX_EXPORTER_API_SECRET }}"
   data:
     - secretKey: EMQX_EXPORTER_API_KEY
       remoteRef:
