chore(postgres): create fitness user

--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -122,6 +122,11 @@ spec:
         - grafana
       password:
         type: AlphaNumeric
+    - name: fitness
+      databases:
+        - fitness
+      password:
+        type: AlphaNumeric
 
   patroni:
     dynamicConfiguration:
