--- a/kubernetes/apps/default/autobrr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/autobrr/app/helmrelease.yaml
@@ -94,6 +94,7 @@ spec:
     persistence:
       config:
         type: persistentVolumeClaim
+        nameOverride: config-autobrr-0
         storageClass: ceph-block
         dataSourceRef:
           apiGroup: volsync.backube
